--- a/crm/templates/crm/company_list.html
+++ b/crm/templates/crm/company_list.html
@@ -2,13 +2,16 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-{% for company in companys %}
-<div>
-    <h1><a href="{% url 'company_details' pk=company.pk %}">{{ company.name }}</a></h1>
-    <p>{{ company.street }}</p>
-    <p>{{ company.postal_code }}, {{ company.city }}</p>
-    <p>NIP: {{ company.number }}</p>
-</div>
-{% endfor %}
+    {% if user.is_superuser %}
+        <a href="{% url 'company_new' %}" class="content"><span class="btn btn-primary">Add company</span></a>
+    {% endif %}
+    {% for company in companys %}
+    <div>
+        <h1><a href="{% url 'company_details' pk=company.pk %}">{{ company.name }}</a></h1>
+        <p>{{ company.street }}</p>
+        <p>{{ company.postal_code }}, {{ company.city }}</p>
+        <p>NIP: {{ company.number }}</p>
+    </div>
+    {% endfor %}
 {% endif %}
 {% endblock content %}
