--- a/static/css/crm.css
+++ b/static/css/crm.css
@@ -1,12 +1,12 @@
 .page-header {
     background-color: white;
     margin-top: 0;
-    padding: 10px 10px 10px 10px;
+    padding: 5px 10px 10px 10px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: orange;
-    font-size: 36pt;
+    font-size: 40pt;
     text-decoration: none;
     text-align: center;
 }
@@ -40,5 +40,40 @@ h1, h2, h3, h4 {
 }
 
 body {
-    background: lightgray;
+    background: #eeeeee;
+}
+
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
+}
+.form-signin .checkbox {
+    font-weight: normal;
+}
+.form-signin .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+.form-signin .form-control:focus {
+    z-index: 2;
+}
+.form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
