--- a/crm/templates/crm/base.html
+++ b/crm/templates/crm/base.html
@@ -9,17 +9,17 @@
 
 <body>
 <div class="page-header">
-    <h1><a href="">BEST CRM SYSTEM EVER</a></h1>
+    <h1><a href="/">BEST CRM SYSTEM EVER</a></h1>
 </div>
 
 <div class="content">
 {% if user.is_authenticated %}
     <a href="/logout" class="btn btn-default">Logout</a>
 {% endif %}
-</div>
 
 {% block content %}
 {% endblock %}
+</div>
 
 </body>
 </html>
