--- a/crm/templates/crm/company_details.html
+++ b/crm/templates/crm/company_details.html
@@ -1,12 +1,13 @@
 {% extends 'crm/base.html' %}
 
 {% block content %}
+<input type=button class="btn btn-default" value="Previous Page" onClick="javascript:history.go(-1);">
 <div>
     <h1>{{ company.name }}</a></h1>
-    <p>{{ company.city }}</p>
-    <p>{{ company.street }}</p>
-    <p>{{ company.postal_code }}</p>
-    <p>{{ company.number }}</p>
+    <p>City: <strong>{{ company.city }}</strong></p>
+    <p>Street: <strong>{{ company.street }}</strong></p>
+    <p>Postal code: <strong>{{ company.postal_code }}</strong></p>
+    <p>NIP: <strong>{{ company.number }}</strong></p>
     {% if user.is_superuser %}
         <a class="btn btn-default" href="{% url 'company_edit' pk=company.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     {% endif %}
