--- a/crm/templates/crm/user_edit.html
+++ b/crm/templates/crm/user_edit.html
@@ -1,10 +1,13 @@
 {% extends 'crm/base.html' %}
 
 {% block content %}
-<h1>User</h1>
-<form method="POST" class="user-form">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Save</button>
-</form>
+<input type=button class="btn btn-default" value="Previous Page" onClick="javascript:history.go(-1);">
+<div>
+    <h1>User</h1>
+    <form method="POST" class="user-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default pull-left">Save</button>
+    </form>
+</div>
 {% endblock %}
