--- a/crm/templates/user/user_edit.html
+++ b/crm/templates/user/user_edit.html
@@ -2,11 +2,16 @@
 
 {% block content %}
 <input type=button class="btn btn-default" value="Previous Page" onClick="javascript:history.go(-1);">
-<div>
+<div class="form-edit">
     <h1>User</h1>
     <form method="POST" class="user-form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% for field in form %}
+        <fieldset class="form-group">
+            <label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
+            <input type="text" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" value="{{ field.value }}">
+        </fieldset>
+        {% endfor %}
         <button type="submit" class="save btn btn-default pull-left">Save</button>
     </form>
 </div>
