--- a/crm/templates/company/company_details.html
+++ b/crm/templates/company/company_details.html
@@ -1,7 +1,7 @@
-{% extends 'crm/base.html' %}
+{% extends 'common/base.html' %}
 
 {% block content %}
-<input type=button class="btn btn-default" value="Previous Page" onClick="javascript:history.go(-1);">
+<a class="btn btn-default" href="{% url 'company_list' %}">Company List</a>
 <div>
     <h1>{{ company.name }}</a></h1>
     <p>City: <strong>{{ company.city }}</strong></p>
@@ -10,6 +10,7 @@
     <p>NIP: <strong>{{ company.number }}</strong></p>
     {% if user.is_superuser %}
         <a class="btn btn-default" href="{% url 'company_edit' pk=company.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-danger" href="{% url 'company_delete' pk=company.pk %}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span></a>
     {% endif %}
 </div>
 {% endblock %}
