--- a/crm/templates/user/user_details.html
+++ b/crm/templates/user/user_details.html
@@ -1,7 +1,7 @@
-{% extends 'crm/base.html' %}
+{% extends 'common/base.html' %}
 
 {% block content %}
-<input type=button class="btn btn-default" value="Previous Page" onClick="javascript:history.go(-1);">
+<a class="btn btn-default" href="{% url 'user_list' %}">Previous Page</a>
 <div>
     <h1>{{ user.username }}</a></h1>
     <p>{{ user.first_name }}</p>
