--- a/crm/templates/user/user_details.html
+++ b/crm/templates/user/user_details.html
@@ -4,9 +4,9 @@
 <a class="btn btn-default" href="{% url 'user_list' %}">Previous Page</a>
 <div>
     <h1>{{ user.username }}</a></h1>
-    <p>{{ user.first_name }}</p>
-    <p>{{ user.last_name }}</p>
-    <p>{{ user.email }}</p>
+    <p>Imię: {{ user.first_name }}</p>
+    <p>Nazwisko: {{ user.last_name }}</p>
+    <p>Email: {{ user.email }}</p>
     <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 </div>
 {% endblock %}
