Added validation to forms

--- a/crm/templates/company/company_add.html
+++ b/crm/templates/company/company_add.html
@@ -13,7 +13,7 @@
             <input type="text" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{{ field.label }}">
         </fieldset>
         {% endfor %}
-        <button type="submit" class="save btn btn-default pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary pull-left">Save</button>
     </form>
 </div>
 {% endblock %}
