--- a/crm/templates/user/user_add.html
+++ b/crm/templates/user/user_add.html
@@ -23,7 +23,7 @@
                 <input type="checkbox" name="is_superuser">Superuser
             </label>
         </div>
-        <button type="submit" class="save btn btn-default pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary pull-left">Save</button>
     </form>
 </div>
 {% endblock %}
