--- a/crm/templates/user/user_edit.html
+++ b/crm/templates/user/user_edit.html
@@ -21,7 +21,7 @@
                 <input type="checkbox" name="is_superuser" value=""/> Superuser
             </label>
         </div>
-        <button type="submit" class="save btn btn-default pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary pull-left">Save</button>
     </form>
 </div>
 {% endblock %}
