Fixed values display in forms

--- a/crm/templates/company/company_edit.html
+++ b/crm/templates/company/company_edit.html
@@ -14,6 +14,7 @@
         </fieldset>
         {% endfor %}
         <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <a class="btn btn-inverse" href="{% url 'company_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
