--- a/crm/templates/user/user_edit.html
+++ b/crm/templates/user/user_edit.html
@@ -8,12 +8,16 @@
         {% csrf_token %}
         {% for field in form %}
         <fieldset class="form-group">
-            <label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
+            <label class="control-label">{{ field.label }}</label>
             {{ field.errors }}
-            <input type="text" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" value="{{ field.value }}">
+            {% if field.label != "Superuser status" %}
+                <input type="text" class="form-control" name="{{ field.name }}" value="{{ field.value }}" >
+            {% else %}
+                <input type="text" class="form-control" name="{{ field.name }}" value="{{ field.value }}" disabled>
+            {% endif %}
         </fieldset>
         {% endfor %}
-        <label class="control-label">New password</label>
+        <label class="control-label">New password (optional)</label>
         {{ field.errors }}
         <input type="password" value="{{ request.POST.new_password }}" name="new_password" class="form-control" placeholder="Password">
         <div class="checkbox">
@@ -22,6 +26,7 @@
             </label>
         </div>
         <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <a class="btn btn-inverse" href="{% url 'user_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
