--- a/crm/templates/company/company_add.html
+++ b/crm/templates/company/company_add.html
@@ -8,12 +8,17 @@
         {% csrf_token %}
         {% for field in form %}
         <fieldset class="form-group">
-            <label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
+            <label class="control-label">{{ field.label }}</label>
             {{ field.errors }}
-            <input type="text" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{{ field.label }}">
+            {% if field.value %}
+                <input type="text" class="form-control" name="{{ field.name }}" value="{{ field.value }}">
+            {% else %}
+                <input type="text" class="form-control" name="{{ field.name }}" placeholder="{{ field.label }}">
+            {% endif %}
         </fieldset>
         {% endfor %}
         <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <a class="btn btn-inverse" href="{% url 'company_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
