--- a/crm/templates/user/user_add.html
+++ b/crm/templates/user/user_add.html
@@ -7,23 +7,28 @@
     <form method="POST" class="user-form">
         {% csrf_token %}
         {% for field in form %}
-            {% if field.label != "Password" and field.name != "is_superuser" %}
-            <fieldset class="form-group">
-                <label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
-                {{ field.errors }}
-                <input type="text" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{{ field.label }}">
-            </fieldset>
+        {% if field.label != "Password" and field.name != "Superuser status" %}
+        <fieldset class="form-group">
+            <label class="control-label">{{ field.label }}</label>
+            {{ field.errors }}
+            {% if field.value %}
+                <input type="text" class="form-control" name="{{ field.name }}" value="{{ field.value }}">
+            {% else %}
+                <input type="text" class="form-control" name="{{ field.name }}" placeholder="{{ field.label }}">
             {% endif %}
+        </fieldset>
+        {% endif %}
         {% endfor %}
-        <label class="control-label" for="id_{{ form.password.name }}">{{ form.password.label }}</label>
+        <label class="control-label">{{ form.password.label }}</label>
         {{ form.password.errors }}
-        <input type="password" class="form-control" name="{{ form.password.name }}" id="id_{{ form.password.name }}" placeholder="{{ form.password.label }}">
+        <input type="password" class="form-control" name="{{ form.password.name }}" placeholder="{{ form.password.label }}">
         <div class="checkbox">
             <label>
                 <input type="checkbox" name="is_superuser">Superuser
             </label>
         </div>
         <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <a class="btn btn-inverse" href="{% url 'user_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
