--- a/crm/templates/user/user_edit.html
+++ b/crm/templates/user/user_edit.html
@@ -22,7 +22,11 @@
         <input type="password" value="{{ request.POST.new_password }}" name="new_password" class="form-control" placeholder="Password">
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="is_superuser" value=""/> Superuser
+                {% if form.is_superuser.value %}
+                    <input type="checkbox" name="is_superuser" value="True" checked/> Superuser
+                {% else %}
+                    <input type="checkbox" name="is_superuser" value="True"/> Superuser
+                {% endif %}
             </label>
         </div>
         <button type="submit" class="save btn btn-primary pull-left">Save</button>
