--- a/crm/templates/user/user_list.html
+++ b/crm/templates/user/user_list.html
@@ -3,12 +3,32 @@
 {% block content %}
 <a href="{% url 'profile' %}"><span class="btn btn-default">Main Page</span></a>
 <a href="{% url 'user_new' %}"><span class="btn btn-primary">Add User</span></a>
-{% for user in users %}
-    <div>
-        <h1><a href="{% url 'user_details' pk=user.pk %}">{{ user.username }}</a></h1>
-        <p>{{ user.first_name }} {{ user.last_name }}</p>
-    </div>
-    <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-    <a class="btn btn-danger" href="{% url 'user_delete' pk=user.pk %}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span></a>
-{% endfor %}
+<h2>List of users allowed to view the system</h2>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Login</th>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Email address</th>
+        <th>Superuser</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for user in users %}
+    <tr>
+        <td><a href="{% url 'user_details' pk=user.pk %}">{{ user.username }}</a></td>
+        <td>{{ user.first_name }}</td>
+        <td>{{ user.last_name }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.is_superuser }}</td>
+        <td>
+            <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a class="btn btn-danger" href="{% url 'user_delete' pk=user.pk %}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span></a>
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 {% endblock content %}
