--- a/crm/templates/admin/choice.html
+++ b/crm/templates/admin/choice.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<div class="container">
+<a href="{% url 'company_list' %}"><span class="btn btn-default">Companies</span></a>
+<a href="{% url 'user_list' %}"><span class="btn btn-default">Users</span></a>
     <div class="row">
         <a href="{% url 'company_list' %}">
-            <div class="col-lg-6 well well-lg">
+            <div class="col-lg-6">
                 <h2>List of companies</h2>
             </div>
         </a>
         <a href="{% url 'user_list' %}">
-            <div class="col-lg-6 well well-lg">
+            <div class="col-lg-6">
                 <h2>List of users</h2>
             </div>
         </a>
     </div>
-</div>
 {% endif %}
 {% endblock %}
