--- a/crm/templates/common/base.html
+++ b/crm/templates/common/base.html
@@ -12,9 +12,9 @@
     <h1><a href="/">BEST CRM SYSTEM EVER</a></h1>
 </div>
 
-<div class="content">
+<div class="container">
 {% if user.is_authenticated %}
-    <a href="/logout" class="btn btn-default">Logout</a>
+    <a href="/logout" class="btn btn-warning">Logout</a>
 {% endif %}
 
 {% block content %}
