--- a/crm/templates/user/user_list.html
+++ b/crm/templates/user/user_list.html
@@ -1,7 +1,7 @@
 {% extends 'common/base.html' %}
 
 {% block content %}
-<a href="{% url 'profile' %}"><span class="btn btn-default">Main Page</span></a>
+<a href="{% url 'choice' %}"><span class="btn btn-default">Main Page</span></a>
 <a href="{% url 'user_new' %}"><span class="btn btn-primary">Add User</span></a>
 <h2>List of users allowed to view the system</h2>
 <table class="table table-striped">
