--- a/crm/templates/company/company_add.html
+++ b/crm/templates/company/company_add.html
@@ -17,7 +17,7 @@
             {% endif %}
         </fieldset>
         {% endfor %}
-        <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary">Save</button>
         <a class="btn btn-inverse" href="{% url 'company_list' %}">Cancel</a>
     </form>
 </div>
