--- a/crm/templates/company/company_details.html
+++ b/crm/templates/company/company_details.html
@@ -9,8 +9,10 @@
     <p>Postal code: <strong>{{ company.postal_code }}</strong></p>
     <p>Identification number: <strong>{{ company.number }}</strong></p>
     {% if user.is_superuser %}
-        <a class="btn btn-default" href="{% url 'company_edit' pk=company.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <a class="btn btn-danger" href="{% url 'company_delete' pk=company.pk %}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span></a>
+        <a class="btn btn-default" href="{% url 'company_edit' pk=company.pk %}">
+            <span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-danger" href="{% url 'company_delete' pk=company.pk %}" onclick="return confirm('Are you sure?')">
+            <span class="glyphicon glyphicon-trash"></span></a>
     {% endif %}
 </div>
 {% endblock %}
