--- a/crm/templates/user/user_add.html
+++ b/crm/templates/user/user_add.html
@@ -27,7 +27,7 @@
                 <input type="checkbox" name="is_superuser">Superuser
             </label>
         </div>
-        <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary">Save</button>
         <a class="btn btn-inverse" href="{% url 'user_list' %}">Cancel</a>
     </form>
 </div>
