--- a/crm/templates/user/user_details.html
+++ b/crm/templates/user/user_details.html
@@ -7,6 +7,7 @@
     <p>Name: {{ user.first_name }}</p>
     <p>Surname: {{ user.last_name }}</p>
     <p>Email: {{ user.email }}</p>
-    <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}">
+        <span class="glyphicon glyphicon-pencil"></span></a>
 </div>
 {% endblock %}
