--- a/crm/templates/user/user_edit.html
+++ b/crm/templates/user/user_edit.html
@@ -29,7 +29,7 @@
                 {% endif %}
             </label>
         </div>
-        <button type="submit" class="save btn btn-primary pull-left">Save</button>
+        <button type="submit" class="save btn btn-primary">Save</button>
         <a class="btn btn-inverse" href="{% url 'user_list' %}">Cancel</a>
     </form>
 </div>
