--- a/crm/templates/admin/choice.html
+++ b/crm/templates/admin/choice.html
@@ -1,22 +1,20 @@
 {% extends "common/base.html" %}
 
 {% block content %}
-{% if user.is_authenticated %}
 <a href="{% url 'company_list' %}"><span class="btn btn-default">Companies</span></a>
 <a href="{% url 'user_list' %}"><span class="btn btn-default">Users</span></a>
-    <div class="row">
-        <a href="{% url 'company_list' %}">
-            <div class="col-md-3 col-md-offset-2">
-                <img src="/static/images/companies.png"/>
-                <h2>List of companies</h2>
-            </div>
-        </a>
-        <a href="{% url 'user_list' %}">
-            <div class="col-md-3 col-md-offset-1">
-                <img src="/static/images/users.png"/>
-                <h2>List of users</h2>
-            </div>
-        </a>
-    </div>
-{% endif %}
+<div class="row">
+    <a href="{% url 'company_list' %}">
+        <div class="col-md-3 col-md-offset-2">
+            <img src="/static/images/companies.png"/>
+            <h2>COMPANIES ADMINISTRATION</h2>
+        </div>
+    </a>
+    <a href="{% url 'user_list' %}">
+        <div class="col-md-3 col-md-offset-1">
+            <img src="/static/images/users.png"/>
+            <h2>USERS ADMINISTRATION</h2>
+        </div>
+    </a>
+</div>
 {% endblock %}
