--- a/crm/templates/user/user_list.html
+++ b/crm/templates/user/user_list.html
@@ -24,11 +24,13 @@
         <td>{{ user.email }}</td>
         <td>{{ user.is_superuser }}</td>
         <td>
-            <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a class="btn btn-danger" href="{% url 'user_delete' pk=user.pk %}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span></a>
+            <a class="btn btn-default" href="{% url 'user_edit' pk=user.pk %}">
+                <span class="glyphicon glyphicon-pencil"></span></a>
+            <a class="btn btn-danger" href="{% url 'user_delete' pk=user.pk %}" onclick="return confirm('Are you sure?')">
+                <span class="glyphicon glyphicon-trash"></span></a>
         </td>
     </tr>
     {% endfor %}
     </tbody>
 </table>
-{% endblock content %}
+{% endblock %}
